Fixed footer to work with dark mode

--- a/tlm/tlm_app/static/styles/styles.css
+++ b/tlm/tlm_app/static/styles/styles.css
@@ -141,3 +141,7 @@
     background-color: #525151; 
     color: #ffffff;         
 }
+
+.dark-mode .footer {
+    background-color: #313131;
+}
